[gd_scene load_steps=7 format=3 uid="uid://byciiqh3e5fa4"]

[ext_resource type="Script" uid="uid://oep3xlff005i" path="res://scripts/BlockHandler.gd" id="1_0dr6l"]
[ext_resource type="PackedScene" uid="uid://ilqdwq3qk3q5" path="res://scenes/block.tscn" id="2_tps08"]
[ext_resource type="Texture2D" uid="uid://br4k1chcbvc77" path="res://kenney_cursor-pixel-pack/Tiles/tile_0072.png" id="3_df80f"]
[ext_resource type="Texture2D" uid="uid://nsmdyo43ji5h" path="res://kenney_cursor-pixel-pack/Tiles/tile_0073.png" id="4_3n456"]
[ext_resource type="Script" uid="uid://b3yer4vru6g0" path="res://scripts/Workspace.gd" id="5_4abng"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2mdjr"]
bg_color = Color(0.254621, 0.703174, 0.373031, 1)

[node name="DragUi" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0dr6l")

[node name="Palette" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 9.0
offset_top = 165.0
offset_right = 49.0
offset_bottom = 205.0

[node name="MoveRightBlock" parent="Palette" instance=ExtResource("2_tps08")]
target_path = NodePath("../../Character")
action_type = "move_right"
is_template_block = true

[node name="Background" parent="Palette/MoveRightBlock" index="0"]
texture = ExtResource("3_df80f")

[node name="MoveLeftBlock" parent="Palette" instance=ExtResource("2_tps08")]
offset_left = 1.0
offset_top = 45.0
offset_right = 41.0
offset_bottom = 85.0
block_type = "move_left"
target_path = NodePath("../../Character")
action_type = "move_left"
is_template_block = true

[node name="Background" parent="Palette/MoveLeftBlock" index="0"]
texture = ExtResource("4_3n456")

[node name="WorkspaceArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 9.0
offset_right = 1150.0
offset_bottom = 48.0
grow_horizontal = 2
script = ExtResource("5_4abng")

[node name="Panel" type="Panel" parent="WorkspaceArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2mdjr")

[node name="RunButton" type="Button" parent="."]
texture_filter = 1
offset_left = 6.0
offset_top = 102.0
offset_right = 56.0
offset_bottom = 147.0
theme_override_font_sizes/font_size = 18
text = "Run"

[node name="ClearButton" type="Button" parent="."]
offset_left = 6.0
offset_top = 60.0
offset_right = 55.0
offset_bottom = 91.0
text = "Clear
"

[editable path="Palette/MoveRightBlock"]
[editable path="Palette/MoveLeftBlock"]
